[package]
name = "RustRampage"
version = "0.1.0"
authors = ["baumhoto <baumhoto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
ordered-float = "2.10.0"